[gd_scene load_steps=13 format=2]

[ext_resource path="res://Media/Runaway-Railway-layout09-690x460-1.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Media/Blauw.png" type="Texture" id=3]
[ext_resource path="res://Media/Groen.png" type="Texture" id=4]
[ext_resource path="res://Media/Draaischakelaar.png" type="Texture" id=5]
[ext_resource path="res://Media/BlauwVerlicht.png" type="Texture" id=6]
[ext_resource path="res://Media/GroenVerlicht.png" type="Texture" id=7]
[ext_resource path="res://Media/Instellingen.png" type="Texture" id=8]
[ext_resource path="res://Media/Checkbox.png" type="Texture" id=9]
[ext_resource path="res://Media/Checkbox2.png" type="Texture" id=10]
[ext_resource path="res://Media/shortcuts.png" type="Texture" id=11]
[ext_resource path="res://Instellingen.gd" type="Script" id=12]

[node name="Main" type="Node2D"]
position = Vector2( -502, -340 )
script = ExtResource( 2 )

[node name="Map" type="Sprite" parent="."]
position = Vector2( 1256, 813 )
texture = ExtResource( 1 )

[node name="LoadPoortjes" type="TextureButton" parent="Map"]
margin_left = 234.0
margin_top = -442.0
margin_right = 377.0
margin_bottom = -301.0
texture_normal = ExtResource( 5 )

[node name="LoadBeugels" type="TextureButton" parent="Map"]
margin_left = 66.0
margin_top = -442.0
margin_right = 208.0
margin_bottom = -300.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[node name="LoadVrijgeven1" type="TextureButton" parent="Map"]
margin_left = -108.0
margin_top = -438.0
margin_right = 30.0
margin_bottom = -302.0
rect_pivot_offset = Vector2( 52, -137 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )

[node name="LoadVrijgeven2" type="TextureButton" parent="Map"]
margin_left = 390.0
margin_top = -443.0
margin_right = 528.0
margin_bottom = -307.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )

[node name="Button" type="Button" parent="Map"]
margin_left = 609.0
margin_top = -272.0
margin_right = 709.0
margin_bottom = -172.0
text = "Instellingen"

[node name="DelayTimer" type="Timer" parent="."]

[node name="SetupTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Instellingen" type="Sprite" parent="."]
position = Vector2( 1253, 825 )
texture = ExtResource( 8 )
script = ExtResource( 12 )

[node name="TextureButton" type="TextureButton" parent="Instellingen"]
margin_left = 1.0
margin_top = -135.0
margin_right = 63.0
margin_bottom = -73.0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="InstellingenSpel" type="Button" parent="Instellingen"]
margin_left = -120.0
margin_top = 171.0
margin_right = 130.0
margin_bottom = 221.0
text = "Naar spel"

[node name="InstellingenShort" type="Button" parent="Instellingen"]
margin_left = -120.0
margin_top = 110.0
margin_right = 130.0
margin_bottom = 160.0
text = "Shortcuts"

[node name="Shortcuts" type="Sprite" parent="Instellingen"]
visible = false
texture = ExtResource( 11 )

[node name="ShortcutsSluiten" type="Button" parent="Instellingen/Shortcuts"]
margin_left = -120.0
margin_top = 185.0
margin_right = 130.0
margin_bottom = 235.0
text = "Sluiten"

[connection signal="pressed" from="Map/LoadPoortjes" to="." method="_on_LoadPoortjes_pressed"]
[connection signal="pressed" from="Map/LoadBeugels" to="." method="_on_LoadBeugels_pressed"]
[connection signal="button_down" from="Map/LoadVrijgeven1" to="." method="_on_LoadVrijgeven1_button_down"]
[connection signal="button_up" from="Map/LoadVrijgeven1" to="." method="_on_LoadVrijgeven1_button_up"]
[connection signal="button_down" from="Map/LoadVrijgeven2" to="." method="_on_LoadVrijgeven2_button_down"]
[connection signal="button_up" from="Map/LoadVrijgeven2" to="." method="_on_LoadVrijgeven2_button_up"]
[connection signal="pressed" from="Map/Button" to="Instellingen" method="_on_Button_pressed"]
[connection signal="timeout" from="SetupTimer" to="." method="_on_SetupTimer_timeout"]
[connection signal="pressed" from="Instellingen/InstellingenSpel" to="Instellingen" method="_on_InstellingenSpel_pressed"]
[connection signal="pressed" from="Instellingen/InstellingenShort" to="Instellingen" method="_on_InstellingenShort_pressed"]
[connection signal="pressed" from="Instellingen/Shortcuts/ShortcutsSluiten" to="Instellingen" method="_on_ShortcutsSluiten_pressed"]
